# meok-c2pa-durable-mcp

./: .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_c2pa_durable_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_c2pa_durable.py  test_server.py
